tests/baselines/reference/modFunctionCrash(strict=true).errors.txt
modFunctionCrash.ts(2,14): error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
modFunctionCrash.ts(6,17): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== modFunctionCrash.ts (2 errors) ====
    declare module Q {
        function f(fn:()=>void); // typechecking the function type shouldnot crash the compiler
                 ~
!!! error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    
    Q.f(function() {this;});
                    ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.